Added Folio and Billing in the updatedMain branch and also updated housekeeping calendar endpoint